--- a/MyApp/app/src/main/AndroidManifest.xml
+++ b/MyApp/app/src/main/AndroidManifest.xml
@@ -10,9 +10,12 @@
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Demo1Activity" >
         </activity>
     </application>
 
