--- a/MyApp/app/src/main/AndroidManifest.xml
+++ b/MyApp/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.demo.myapp" >
+    package="com.demo.myapp">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -15,10 +15,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".Demo1Activity" >
-        </activity>
-        <activity android:name=".Demo2Activity" >
-        </activity>
+        <activity android:name=".Demo1Activity" />
+        <activity android:name=".Demo2Activity" />
+        <activity android:name=".Demo3ListActivity" />
+        <activity android:name=".Demo3Activity" />
+        <activity android:name=".Demo3GrideViewActivity" />
+        <activity android:name=".Demo3StaggeredActivity"></activity>
     </application>
 
 </manifest>
