--- a/MyApp/app/src/main/AndroidManifest.xml
+++ b/MyApp/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".Demo3ListActivity" />
         <activity android:name=".Demo3Activity" />
         <activity android:name=".Demo3GrideViewActivity" />
+        <activity android:name=".Demo4Activity" />
+        <activity android:name=".Deom4SkipToActivity" />
         <activity android:name=".Demo3StaggeredActivity"></activity>
     </application>
 
